...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/eventNameOrgText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Event Name"
            android:fontFamily="@font/bold1"
            android:textSize="18sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/attendeeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:text="Attendee Count: 0"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/eventDateOrgText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/light"
            android:text="10/10/2024" />

        <TextView
            android:id="@+id/eventTimeOrgText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/light"
            android:text="20:00 - 22:00" />

        <TextView
            android:id="@+id/eventDetailOrgText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/light"
            android:text="Detail: " />

        <LinearLayout
...

                android:text="Qr code"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewMapButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventQrText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/light"
                    android:text="Event QR Code"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/eventQrView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </LinearLayout>

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/promoQrText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/light"
                    android:text="Promo QR Code"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/promoQrView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <ImageButton
        android:id="@+id/expandButton"
        android:layout_width="34dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:padding="10dp"
...
