...
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Generate Unique QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/generateQrCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Generate Unique QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
...
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <!-- Home Page Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Home Page"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
...
